@@ -1,3 +1,9 @@
+2004-04-22  Matti Aarnio  <mea@zmailer.org>
+
+	* man/smtpserver.8.in, man/Makefile.in:
+	    Produce the PDF files via DVI file route.
+	    The resulting file is _a_lot_ nicer to look at!
+
 2004-04-20  Matti Aarnio  <mea@zmailer.org>
 
 	* man/smtpserver.8.in, proto/smtpserver.conf.in:
